Fix broken layout for TeaserSingle when only little text is available #2

--- a/patterns/core/TeaserSingle/teaserSingle.styl
+++ b/patterns/core/TeaserSingle/teaserSingle.styl
@@ -18,7 +18,7 @@ $breakpoint-huge = 1400px
     margin 1.2rem 2rem
 
 .single-teaser__image
-  display flex
+  display block
   height 29.4rem
 
   @media (min-width $breakpoint-small)
@@ -29,6 +29,10 @@ $breakpoint-huge = 1400px
     max-width 36.8rem
     flex 1 0 auto
 
+  picture
+    display flex
+    height 100%
+
   img
     width 100%
     object-fit cover
@@ -37,7 +41,7 @@ $breakpoint-huge = 1400px
   padding 1.2rem 1.5rem
 
   @media (min-width $breakpoint-small)
-    flex-shrink 0
+    flex 1 0 50%
 
   @media (min-width $breakpoint-medium)
     display flex
